tests/ui/ensure-nonbool.stderr
error[E0600]: cannot apply unary operator `!` to type `&'static str`
 --> tests/ui/ensure-nonbool.rs:4:5
  |
4 |     ensure!("...");
  |     ^^^^^^^^^^^^^^ cannot apply unary operator `!`
  |
  = note: this error originates in the macro `$crate::__fallback_ensure` which comes from the expansion of the macro `ensure` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0600]: cannot apply unary operator `!` to type `&mut bool`
 --> tests/ui/ensure-nonbool.rs:9:25
  |
9 |         Struct(cond) => ensure!(cond),
  |                         ^^^^^^^^^^^^^ cannot apply unary operator `!`
  |
  = note: this error originates in the macro `$crate::__fallback_ensure` which comes from the expansion of the macro `ensure` (in Nightly builds, run with -Z macro-backtrace for more info)
